fix header wrap

--- a/jaysa.net/src/app/styles/Header.module.css
+++ b/jaysa.net/src/app/styles/Header.module.css
@@ -24,6 +24,12 @@
   color: var(--bg2-color);
 }
 
+.headerTabs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
